k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      # imagePullSecrets:
      # - name: ecr-secret
      containers:
      
      - name: backend
        image: 533267142189.dkr.ecr.ap-southeast-1.amazonaws.com/misa-test:backend-latest
        ports:
        - containerPort: 3000
        volumeMounts:
            - mountPath: /app/volume
              name: host-volume
            - mountPath: "/usr/share/nginx/html"
              name: pv-storage
      volumes:
      - name: host-volume
        hostPath:
          path: /tmp/test
          type: DirectoryOrCreate
      - name: pv-storage
        persistentVolumeClaim:
          claimName: my-pvc

          

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 3000
